<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Krotka Lista</string>
    <string name="main_title">Wyjazdy</string>
    
    <string name="button_new_payment">Nowa płatność</string>
    <string name="button_account_payment">Rozlicz płatność</string>
    <string name="button_participants">Uczestnicy</string>
    
    <string name="form_who">Kto:</string>
    <string name="form_how_much">Ile:</string>
    <string name="form_for_what">Za co:</string>
    <string name="form_for_who">Za kogo:</string>
    <string name="form_when">Kiedy:</string>
    <string name="form_yes">Tak</string>
    <string name="form_no">Nie</string>
    <string name="form_ok">Ok</string>
    <string name="form_cancel">Anuluj</string>
    
    <string name="dialog_ask_for_participant_deletion">Czy jesteś pewny, że chcesz usunąć użytkownika?</string>   
    <string name="dialog_choose_action">Wybierz akcję</string>
    <string name="dialog_show_details">Pokaż szczegóły</string>
    <string name="dialog_remove">Usuń</string>
    <string name="dialog_confirmation">Potwierdzenie</string>
    
    
    <string name="participants">Uczestnicy</string>
    <string name="debtors">Dłużnicy</string>
    
    <string name="suggested_participant">Sugerowany płatnik:</string>
    <string name="anyone">Ktokolwiek</string>
    
    
    
    <string name="participant_add_new">Dodaj</string>
    <string name="participant_add_new_title">Dodaj osobę:</string>
    <string name="form_confirm">Zatwierdź</string>
    <string name="button_show_payments">Pokaż płatności</string>
    <string name="form_what_for_hint">Za co płatność</string>
    <string name="form_amount_default">0.00zł</string>
    <string name="form_debtors">Dłużnicy</string> 
    
    <string name="warning_no_participant">Nie można dodać nowej płatności! Najpierw dodaj współtowarzyszy wycieczki.</string>
    <string name="warning_no_debtor">Nie można dodać nowej płatności! Najpierw dodaj dłużnika.</string>
    <string name="warning_deletion_not_allowed_title">Usuwanie niemożliwe!</string>
    <string name="warning_deletion_not_allowed" formatted="false">Istnieje %d płatności, które zawierają użytkownika %s jako dłużnika lub/i płatnika.</string>
    
</resources>


