<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_width="match_parent" android:orientation="vertical">
    
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:baselineAligned="false">
        <ImageButton android:id="@+id/imageButton1" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
        <ImageButton android:id="@+id/imageButton2" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
        <ImageButton android:id="@+id/imageButton3" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
        <ImageButton android:id="@+id/imageButton4" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="match_parent"></ImageButton>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/form_who" android:textSize="32.3sp" ></TextView>
        <Spinner android:id="@+id/spinner1" android:layout_height="wrap_content" android:layout_width="wrap_content"></Spinner>
    </LinearLayout>
  
     <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="32.3sp" android:text="@string/form_how_much"></TextView>
        <Spinner android:id="@+id/spinner1" android:layout_height="wrap_content" android:layout_width="wrap_content"></Spinner>
    </LinearLayout>
    
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="32.3sp" android:text="@string/form_when"></TextView>
        <DatePicker android:id="@+id/datePicker1" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
    </LinearLayout>
  
</LinearLayout>